--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "three": "^0.101.1",
     "tslint-config-airbnb": "^5.11.1"
   },
